bugfix: table overflown

--- a/package/styles/editor.scss
+++ b/package/styles/editor.scss
@@ -71,6 +71,10 @@
     }
   }
 
+  .tableWrapper {
+    @apply overflow-x-scroll custom-scrollbar;
+  }
+
   table {
     border-collapse: collapse;
     border-spacing: 0;
